manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-mega-app
  labels:
    app: devops-mega-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-mega-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: devops-mega-app
    spec:
      containers:
        - name: devops-mega-app
          image: rohitdockerhub01/devops-mega-app:1.0.0-20
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
