manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-mega-app-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.mechnomax.co.in
      secretName: app-mechnomax-tls
  rules:
    - host: app.mechnomax.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-mega-app-svc
                port:
                  number: 80
